[tool.poetry]
name = "poetry-check-lock"
version = "0.0.1"
description = ""
authors = ["Trim21 <i@trim21.me>"]
include = [
    { include = "poetry_check_lock" },
]

[tool.poetry.scripts]
poetry_check_lock = 'poetry_check_lock:cli'

[tool.poetry.dependencies]
python = "^3.5"

poetry = "^1.0.5"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"
pre-commit = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
