[tool.poetry]
name = "poetry-check-lock"
version = "0.0.4"
description = ""
authors = ["Trim21 <i@trim21.me>"]
packages = [{ include = "poetry_check_lock.py" }]

[tool.poetry.scripts]
poetry_check_lock = 'poetry_check_lock:cli'

[tool.poetry.dependencies]
python = "^3.5"
poetry = "^1.1.9"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
