[tool.poetry]
name = "poetry-check-lock"
version = "0.0.5"
description = ""
authors = ["Trim21 <i@trim21.me>"]
packages = [{ include = "poetry_check_lock.py" }]

[tool.poetry.scripts]
poetry_check_lock = 'poetry_check_lock:cli'

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.1.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
